<resources>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Sair</string>


    <string name="app_name">HairApp</string>
    <string name="title_activity_main">Tarefas</string>

    <string name="hintEdtUser">Usuário</string>
    <string name="hintEdtPassword">Senha</string>
    <string name="btnCadastre">Cadastre-se</string>
    <string name="btnOk">Confirmar</string>

    <string name="btnCancelar">Sair</string>

    <string name="MenuDrawer">Menu Principal</string>
    <string name="MenuDrawerNovaTarefa">Nova Tarefa</string>
    <string name="MenuDrawerNovoRelat">Relatórios</string>
    <string name="MenuDrawerSobre">Sobre</string>

    <string name="txtTitleCadasUsua">Registre-se</string>

    <string name="txtTitleCadasTarefa">Adicionar Tarefa</string>
    <string name="hintEditCliente">Cliente</string>
    <string name="hintEditTarefa">Tarefa</string>
    <string name="hintEditValor">Valor</string>
    <string name="usuarioMenuLabel">Usuário: </string>









</resources>
