<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="56dp"
        app:srcCompat="@drawable/logotask"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtMenuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:layout_below="@id/imageView" />

    <TextView
        android:id="@+id/txtMenuDrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuDrawer"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/txtMenuPrincipal" />

    <TextView
        android:id="@+id/txtMenuUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/txtMenuUsuarioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/usuarioMenuLabel"
        android:layout_toLeftOf="@+id/txtMenuUsuario"
        android:layout_alignParentBottom="true"
        />




</RelativeLayout>
